--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -181,11 +181,11 @@
     display: block;
     margin: 0 0.6rem;
     padding: 0.5rem 0;
-    color: $masthead-link-color;
+    color: #333; /* Changed to dark gray/black */
     text-decoration: none;
 
     &:hover {
-      color: $masthead-link-color-hover;
+      color: #8A6BB1; /* Purple on hover */
     }
   }
 
